--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "node dist/app.js",
+    "build:live": "tsc && node dist/app.js",
     "start:dev": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
