--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "build:live": "tsc && node dist/app.js",
+    "build:live": "tsc -w",
     "start:dev": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
